// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

package node;

import "gogo.proto";

service Certificates {
    rpc Sign(SigningRequest) returns (SigningResponse);
}

message SigningRequest {
    bytes authToken = 1;
    bytes cert = 2;
}

message SigningResponse {
    bytes signature = 1;
}